@@ -1,8 +1,8 @@
 spvd (0.8.4~dev-1) unstable; urgency=low
 
-  * New upstream release, closes: #3532.
+  * New upstream release, closes: #3532, #3070.
 
- -- Rémi Cardona <remi.cardona@smartjog.com>  Thu, 30 Sep 2010 12:00:40 +0200
+ -- Gilles Dartiguelongue <gilles.dartiguelongue@smartjog.com>  Fri, 01 Oct 2010 14:18:28 +0200
 
 spvd (0.8.3-1) unstable; urgency=low
 
